src/github.com/ebay/akutan/query/parser/testdata/legacy/errors/cant_resolve_entities.bql
?s <color> <red>
?s <size> <large>
